Resolved flickering issue on DDV

--- a/ota-plus-web/app/reactapp/css/pages.scss
+++ b/ota-plus-web/app/reactapp/css/pages.scss
@@ -582,10 +582,6 @@
                 display: flex;
             }
 
-            .device-info-loader {
-                margin-right: 25px;
-            }
-
             .device-info-item {
                 margin: 0 10px;
                 display: inline-block;
@@ -1757,7 +1753,6 @@
                         }
 
                         img {
-                            width: 20px;
                             transition: opacity 0.3s ease;
                             cursor: pointer;
 
@@ -1765,7 +1760,8 @@
                                 opacity: 0;
                                 position: absolute;
                                 right: 10px;
-                                top: 10px;
+                                top: 12px;
+                                width: 20px;
                             }
                         }
                         .icons {
@@ -1775,10 +1771,10 @@
                             z-index: 10;
 
                             img {
-                                width: 15px;
+                                width: 25px;
 
                                 &.rename {
-                                    width: 25px;
+                                    margin-right: -5px;
                                 }
                             }
                         }
